// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/unified-share-modal/SharedLinkAccessDescription people in company should render correct menu 1`] = `
<small
  className="usm-menu-description"
>
  <FormattedMessage
    defaultMessage="Anyone in your company with the link or people invited to this file can access"
    id="boxui.unifiedShare.peopleInCompanyCanAccessFile"
    values={
      Object {
        "company": "",
      }
    }
  />
</small>
`;

exports[`features/unified-share-modal/SharedLinkAccessDescription people in company should render correct menu 2`] = `
<small
  className="usm-menu-description"
>
  <FormattedMessage
    defaultMessage="Anyone at {company} with the link or people invited to this file can access"
    id="boxui.unifiedShare.peopleInSpecifiedCompanyCanAccessFile"
    values={
      Object {
        "company": "Box",
      }
    }
  />
</small>
`;

exports[`features/unified-share-modal/SharedLinkAccessDescription people in company should render correct menu 3`] = `
<small
  className="usm-menu-description"
>
  <FormattedMessage
    defaultMessage="Anyone in your company with the link or people invited to this folder can access"
    id="boxui.unifiedShare.peopleInCompanyCanAccessFolder"
    values={
      Object {
        "company": "",
      }
    }
  />
</small>
`;

exports[`features/unified-share-modal/SharedLinkAccessDescription people in company should render correct menu 4`] = `
<small
  className="usm-menu-description"
>
  <FormattedMessage
    defaultMessage="Anyone at {company} with the link or people invited to this folder can access"
    id="boxui.unifiedShare.peopleInSpecifiedCompanyCanAccessFolder"
    values={
      Object {
        "company": "Box",
      }
    }
  />
</small>
`;

exports[`features/unified-share-modal/SharedLinkAccessDescription people in item should render correct menu 1`] = `
<small
  className="usm-menu-description"
>
  <FormattedMessage
    defaultMessage="Only invited people can access this file"
    id="boxui.unifiedShare.peopleInItemCanAccessFile"
    values={
      Object {
        "company": "Box",
      }
    }
  />
</small>
`;

exports[`features/unified-share-modal/SharedLinkAccessDescription people in item should render correct menu 2`] = `
<small
  className="usm-menu-description"
>
  <FormattedMessage
    defaultMessage="Only invited people can access this folder"
    id="boxui.unifiedShare.peopleInItemCanAccessFolder"
    values={
      Object {
        "company": "Box",
      }
    }
  />
</small>
`;

exports[`features/unified-share-modal/SharedLinkAccessDescription people with link should render correct menu 1`] = `
<small
  className="usm-menu-description"
>
  <FormattedMessage
    defaultMessage="Publicly accessible and no sign-in required"
    id="boxui.unifiedShare.peopleWithLinkDescription"
    values={
      Object {
        "company": "Box",
      }
    }
  />
</small>
`;

exports[`features/unified-share-modal/SharedLinkAccessDescription people with link should render correct menu 2`] = `
<small
  className="usm-menu-description"
>
  <FormattedMessage
    defaultMessage="Publicly accessible and no sign-in required"
    id="boxui.unifiedShare.peopleWithLinkDescription"
    values={
      Object {
        "company": "Box",
      }
    }
  />
</small>
`;
